Fix dark mode mobile menu

--- a/src/styles/navigation.module.css
+++ b/src/styles/navigation.module.css
@@ -10,10 +10,10 @@
     grid-template-columns: 1fr 1fr;
     top: 0;
     left: 0;
-    height: calc(100vh - 4rem + 1px);
+    min-height: calc(100vh - 4rem);
     width: 100vw;
     position: fixed;
-    background: var(--secondaryBackground);
+    background: var(--primaryBackground);
   }
 
   @media screen and (min-width: 768px) {
@@ -49,11 +49,11 @@
     width: 100%;
     color: var(--primaryColor);
     font-size: 150%;
-    border-bottom: 1px solid #444;
+    border-bottom: 1px solid var(--primaryBorder);
 
     &:hover,
     &:focus {
-      background: #333;
+      background: var(--secondaryBackground);
     }
   }
 
@@ -98,7 +98,7 @@
 
   &:nth-child(odd) .link {
     @media screen and (max-width: 767px) {
-      border-right: 1px solid #444;
+      border-right: 1px solid var(--primaryBorder);
     }
   }
 
